[package]
name = "distcomp"
version = "0.1.0"
authors = ["5225225 <5225225@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sodiumoxide = "0.2.2"
uuid = { version = "0.7.4", features = ["serde"] }
rusqlite = { version = "0.19.0", features = ["uuid"] }

serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.10"
better-panic = "0.1.2"
wasmi = "0.5.0"
wabt = "0.9.0"
static_assertions = "0.3.3"
lazy_static = "1.3.0"
handletree-rs = "0.2.0"
derive_more = "0.15.0"
