[package]
name = "wasmlib"
version = "0.1.0"
authors = ["5225225 <5225225@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wee_alloc = "0.4.4"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_cbor = { version = "0.10", default-features = false, features = ["unsealed_read_write"]}
